Fix header misalignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -217,7 +217,7 @@ textarea
     {
         display: flex;
 
-        max-width: 55em;
+        max-width: 60em;
         margin: auto;
     }
     nav h2
